# splinecloud-scipy

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml  setup.py  splinecloud_scipy.py
docs/: RELEASING.md
examples/: curve_accuracy_example.ipynb  curve_load.py  curve_load_example.ipynb  curve_logscale_eval_example.ipynb  load_surface.ipynb  load_surface_logaxes.ipynb  subset_load_example.ipynb
splinecloud_scipy/: __init__.py  api_client.py  parametric_spline.py  parametric_spline_surface.py  piecewise_polynomial.py
src/: api_client.py  parametric_spline.py  piecewise_polynomial.py  splinecloud_scipy.py
tests/: test_api_client.py  test_parametric_spline.py  test_parametric_surface.py
