[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splinecloud-scipy"
version = "0.0.4"
description = "A SplineCloud client based on SciPy."
readme = "README.md"
authors = [{ name = "Vadym Pasko", email = "vadym@splinecloud.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["splinecloud", "spline", "BSpline", "interpolation", "regression", "curvefitting"]
dependencies = ['numpy', 'scipy', 'requests']
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["responses"]

[project.urls]
Homepage = "https://github.com/nomad-vagabond/splinecloud-scipy"
