[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splinecloud-scipy"
version = "1.2.4"
description = "A SplineCloud client based on SciPy."
readme = "README.md"
authors = [{ name = "Vadym Pasko", email = "vadym@splinecloud.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["splinecloud", "spline", "BSpline", "interpolation", "regression", "curve fitting"]
dependencies = ['numpy', 'scipy', 'requests']
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["responses", "mypy"]
test = ["responses", "matplotlib", "mypy"]

[project.urls]
Homepage = "https://github.com/nomad-vagabond/splinecloud-scipy"
